--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,15 @@
     <string name="retype_password">Retype password</string>
     <string name="last_name">Last name</string>
     <string name="first_name">First name</string>
+    <string name="favorite">Favorite</string>
+    <string name="profile">Profile</string>
+    <string name="wallet">Wallet</string>
+    <string name="order">Order</string>
+    <string name="home">Home</string>
+
+    <string name="favorite_fragment">Favorite Fragment</string>
+    <string name="orders_fragment">Orders Fragment</string>
+    <string name="profile_fragment">Profile Fragment</string>
+    <string name="wallet_fragment">Wallet Fragment</string>
+    <string name="home_frgment">Home Frgment</string>
 </resources>
