add favorite food recycler view, data and adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="home_top_header">What is your favorite food?</string>
+    <string name="top_item_name">Item Name</string>
 </resources>
